Fix side-menu width, gap for Docs, Terms

--- a/src/public/less/pages/documentation.less
+++ b/src/public/less/pages/documentation.less
@@ -94,10 +94,11 @@
 		padding: 0 15px 80px;
 		width: 1254px;
 		height: 100%;
+		column-gap: 24px;
 
 		.side-menu {
 			display: none;
-			max-width: 224px;
+			width: 224px;
 			margin-top: 180px;
 			height: 700px;
 
